--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Family_Tree"></activity>
+        <activity android:name=".CalendarReservation"></activity>
+        <activity android:name=".Family_Tree" />
         <activity android:name=".Family_Quest" />
         <activity android:name=".Family_Gallery" />
         <activity android:name=".Family_Date" />
