--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/icon"
+        android:label="MAY"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CalendarReservation"></activity>
+        <activity android:name=".TreeSkin"></activity>
+        <activity android:name=".CalendarReservation" />
         <activity android:name=".FamilyTree" />
         <activity android:name=".FamilyQuest" />
         <activity android:name=".FamilyGallery" />
